# vlm-diffadapter-qwen2-0.5b

./: .gitignore  README.md  pyproject.toml
configs/: agent_workflow.yaml  data.yaml  eval.yaml  model.yaml  model_h100_real.yaml  model_h100_sd15_pretrained_only.yaml  model_h100_sd15_sequence_resampler.yaml  model_h100_sd15_unet.yaml  model_h100_visual_prefix_clip_qwen_causal.yaml  model_h100_visual_prefix_clip_qwen_causal_deep_gated.yaml  model_h100_visual_prefix_clip_qwen_causal_prefix32.yaml  model_h100_visual_prefix_clip_qwen_causal_prefix64.yaml  model_h100_visual_prefix_clip_qwen_causal_xfusion.yaml  model_h100_visual_prefix_clip_qwen_causal_xfusion_layerwise.yaml  model_visual_prefix.yaml  model_visual_prefix_causal_tiny.yaml  model_visual_prefix_clip.yaml  model_visual_prefix_clip_finetune.yaml  model_visual_prefix_frozen_vision.yaml  model_visual_prefix_xfusion_layerwise_tiny.yaml  model_visual_prefix_xfusion_tiny.yaml  train.yaml  train_image_lr_1e_3.yaml  train_image_lr_2e_4.yaml  train_image_lr_5e_5.yaml
docs/: CURRENT_VKR_SOURCE_OF_TRUTH.md  MODULES.md
scripts/: compare_denoiser_ablation.py  compare_multimodal_runs.py  evaluate_caption_llm_judge.py  evaluate_multimodal_benchmark.py  evaluate_prompt_grid_clip.py  evaluate_vqa_predictions.py  export_hf_image_caption_metadata.py  filter_manifest_excluding_ids.py  generate_multimodal_predictions.py  generate_prompt_grid.py  generate_sd14_prompt_grid.py  generate_vqa_predictions.py  import_hf_viewer_vqa_subset.py  m77_pod_preflight.py  make_manifest_subset.py  materialize_image_caption_metadata.py  (+8 more)
(+100 files in other folders)
